# AlgoraDynExecution

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  example.sh  gmon.out  main.cpp
src/: algoracli.cpp  algoracli.hpp  algorithmexecuter.cpp  algorithmexecuter.hpp  algorithmsettings.cpp  algorithmsettings.hpp  algorithmtype.cpp  algorithmtype.hpp  analyzedynamicdigraph.cpp  analyzedynamicdigraph.hpp  booltostring.cpp  booltostring.hpp  cli.cpp  cli.hpp  createalgorithmsettings.cpp  createalgorithmsettings.hpp  erdosrenyi_generator.cpp  erdosrenyi_generator.hpp  executionmode.hpp  graphinstatiator.hpp  graphreader.cpp  graphreader.hpp  io.cpp  io.hpp  main.cpp  measureperformance.cpp  measureperformance.hpp  operationstatistics.hpp  operationtype.cpp  operationtype.hpp  randomgraphinstantiator.cpp  randomgraphinstantiator.hpp  settings.hpp  sourcevertices.hpp  testcorrectness.cpp  testcorrectness.hpp  timemeasurement.hpp  unit_test.cpp  unit_test.hpp
